# LitReview-Bot

./: .gitignore  README.md  agent_core.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  tools.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/17b3d342-7c6c-429b-b6f2-aa149aac4e47/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/1eeae493-9a07-4a04-8a40-eacedaf575e3/: segment.json
qdrant_storage/collections/docs/0/segments/a50028cf-ea2c-4c8a-a0fb-8f0d3b8140c8/: segment.json
qdrant_storage/collections/docs/0/segments/b947d500-f419-4019-85d1-e0787cd4be1a/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/docs/0/segments/cf53a1c4-5e8f-4668-ab79-d202214286b9/: mutable_id_tracker.mappings  mutable_id_tracker.versions
